# ffmpeg_vstat_parser

./: .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix
.github/workflows/: rust.yml
resources/avro/: ffmpeg_vstat_info.avsc
resources/vstats/: example_vstats_v1  example_vstats_v2
src/: args.rs  main.rs  parser.rs  regexes.rs
src/modes/: fifo_out.rs  http_out.rs  mod.rs
