[package]
name = "ffmpeg_vstat_parser"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipipe = "0.11"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0.89"
argh = "0.1.12"
reqwest = {version = "0.12.8", default-features = false, features = ["json", "blocking"]}
strum = "0.26.3"
strum_macros = "0.26.4"
regex = "1.11.0"
once_cell = "1.20.2"
avro-rs = "0.13.0"
serde = { version = "1.0.210", features = ["derive"] }
bson = "2.13.0"
rmp-serde = "1.3.0"
chrono = "0.4.39"